--- a/src/assets/style/Styles.scss
+++ b/src/assets/style/Styles.scss
@@ -12,6 +12,13 @@ body {
   left: 0;
   right: 0;
   z-index: 5;
+  padding: 0;
+  margin: 0;
+}
+
+.navbar-brand {
+  padding: 0;
+  margin: 0;
 }
 
 .home-input {
