--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -31,6 +31,14 @@ body {
   cursor: pointer;
 }
 
+.object-fit-cover {
+  object-fit: cover;
+}
+
+.object-position-center {
+  object-position: center;
+}
+
 .fade-anim {
   animation: fade 300ms ease;
 }
