Add DashBoardNavBar and Routes-only

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -19,6 +19,11 @@ body {
   margin: 0;
 }
 
+.custom-dashnav {
+  padding-top: 10px;
+  font-size: 14px;
+}
+
 .navbar-brand {
   padding: 0;
   margin: 0;
