Fix DashboardNav, Add in AppRouter this nav and Add OpCard component in Opportunities view

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -19,9 +19,8 @@ body {
   margin: 0;
 }
 
-.custom-dashnav {
-  padding-top: 10px;
-  font-size: 14px;
+.list-format {
+  list-style-type: none;
 }
 
 .navbar-brand {
