--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -99,6 +99,13 @@ textarea {
   width: inherit;
 }
 
+.invalid-date {
+  &:focus {
+    border-color: #dc3545;
+    box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 25%);
+  }
+}
+
 .react-datepicker-wrapper {
   width: 100%;
 }
