feat: add react modal to display form to complete service request

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -17,7 +17,6 @@ textarea {
   top: 0;
   left: 0;
   right: 0;
-  z-index: 5;
   padding: 0;
   margin: 0;
 }
@@ -135,6 +134,21 @@ textarea {
 
 .react-datepicker__close-icon::after {
   background-color: $primary !important;
+}
+
+/*========= Styles for react-modal =========*/
+
+.ReactModal__Overlay {
+  opacity: 0;
+  transition: opacity 300ms ease-in-out;
+}
+
+.ReactModal__Overlay--after-open {
+  opacity: 1;
+}
+
+.ReactModal__Overlay--before-close {
+  opacity: 0;
 }
 
 /*========= Keyframes =========*/
