feat: list available opportunities, visual improvements
- added react-clamp-lines to clamp large opportunities descriptions
- added helper function to display name and surname initial
- render buttons based on screen size
- some components renamed

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -180,6 +180,23 @@ textarea {
   opacity: 0;
 }
 
+/*========= Styles for react-clamp-lines =========*/
+
+.clamp-lines > * {
+  margin: 0;
+}
+
+.clamp-lines__button {
+  background: none;
+  border: 0;
+  color: $primary;
+  cursor: pointer;
+  padding: 0;
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
 /*========= Keyframes =========*/
 
 @keyframes fade {
