--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -58,10 +58,6 @@ textarea {
   object-position: center;
 }
 
-.fade-anim {
-  animation: fade 300ms ease;
-}
-
 .custom-navlink-border {
   border-color: transparent;
   border-bottom-style: solid;
@@ -184,6 +180,7 @@ textarea {
 
 .clamp-lines > * {
   margin: 0;
+  white-space: pre-wrap;
 }
 
 .clamp-lines__button {
@@ -191,13 +188,23 @@ textarea {
   border: 0;
   color: $primary;
   cursor: pointer;
+  font-weight: 500;
   padding: 0;
   &:hover {
     text-decoration: underline;
   }
 }
 
-/*========= Keyframes =========*/
+/*========= Keyframes and animations =========*/
+
+.fade-anim {
+  animation: fade 300ms ease;
+}
+
+.scale-anim {
+  animation: scaleInOut 1500ms linear;
+  animation-iteration-count: infinite;
+}
 
 @keyframes fade {
   from {
@@ -205,6 +212,23 @@ textarea {
   }
 
   to {
+    opacity: 1;
+  }
+}
+
+@keyframes scaleInOut {
+  0% {
+    transform: scale(1);
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1.2);
+    opacity: 0.7;
+  }
+
+  to {
+    transform: scale(1);
     opacity: 1;
   }
 }
