feat: get and display message receiver data, visual improvements

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -52,6 +52,16 @@ textarea {
   }
 }
 
+.send-message-icon {
+  transition: background-color 250ms;
+  & svg {
+    transform: rotate(90deg) translateY(-1px);
+  }
+  &:hover {
+    background-color: transparentize($color: $primary, $amount: 0.9);
+  }
+}
+
 /*========= Helpers =========*/
 
 .cursor-pointer {
