feat: chat working, store chat messages in db, display chat messages
- added message component
- show date info in chat
- added listener for changes in messages
- improved close modal button
- added type of user below receiver name in chat header
- added loading state for message sending
- removed overlay scrollbars

--- a/src/assets/style/styles.scss
+++ b/src/assets/style/styles.scss
@@ -44,6 +44,33 @@ textarea {
   color: $gray;
 }
 
+/*========= Styles for chat =========*/
+
+.message {
+  width: 90%;
+  border-radius: 10px;
+  margin-bottom: 0.2em;
+
+  & span {
+    font-size: 0.7rem;
+    margin-top: 0.1rem;
+  }
+
+  &--not-own {
+    border-bottom-left-radius: 0;
+    background-color: white;
+  }
+  &--own {
+    background-color: #efefef;
+    border-bottom-right-radius: 0;
+  }
+
+  &--own + &--not-own,
+  &--not-own + &--own {
+    margin-top: 0.3em;
+  }
+}
+
 .message-icon {
   background-color: white;
   transition: background-color 250ms ease;
